# drf-api-permissions-postgres

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
breeds/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
breeds/migrations/: 0001_initial.py
breeds_project/: .env  asgi.py  settings.py  urls.py  wsgi.py
